# raylib_2048

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  run.bat  run.sh
src/: 2048_core.h  colors_palette.h  colors_pallete.h  config.h  core_2048.c  core_2048.h  main.c  platform_port.c  platform_port.h
tests/: CMakeLists.txt  build.bat  build.sh  configure.bat  configure.sh  run.bat  run.sh  test_2048_core.c  test_helpers.c  test_helpers.h  test_main.c  test_runner.c
tests/fakes/: platform_port.c
tests/unity/: CMakeLists.txt
